--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,4 +12,9 @@ Description: This package helps to prepare the data,keep the data consistent.
 License: Open
 Encoding: UTF-8
 LazyData: true
+Imports:
+    lubridate,
+    dplyr,
+    zoo,
+    xts
 RoxygenNote: 6.0.1
